[package]
name = "atp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0" 
actix-cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = {version = "1.14.0", features = ["full"]}
tokio-postgres = "0.7.10"
bb8 = "0.8.1"
bigdecimal = "0.3.1"
pg_bigdecimal = "0.1.5"
chrono = {  version = "0.4.10", features = ["serde"] }
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
num-traits = "0.2"
tungstenite = "0.15.0"
tokio-tungstenite = "0.15"
futures-util = "0.3.17"
bcrypt = "0.15.1"
lazy_static = "1.4"
jsonwebtoken = "=9.3.0"
thiserror = "1.0"
dotenv = "0.15"
local-ip-address = "0.4"